	time ago. Unfortunately, the _init() functions were clashing with other
	libraries, such as libgcc_s.

	New scheme: shared libraries explicitly export a Nswhateva_LibInit(), and
	programs and other libraries which depend on it call it during their own
	initialisation.

	* configure.in:
	* m4/tcl.m4: Update to latest (3.6) tcl.m4.

2007-10-12  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclcmds.c:
	* nsd/tclconf.c: Convert to Tcl obj based commands. Clean up option
	parsing. Catch type errors from config values. Add -min and -max options
	for int types.

	* tests/test.nscfg:
	* tests/ns_config.man: Add new config tests.

	* doc/src/ns_config.man:
	* doc/src/ns_configsection.man:
	* doc/src/ns_configsections.man:
	* doc/src/ns_section.man:
	* doc/src/ns_param.man:
	* doc/src/admin-config.man: Deleted.
	* doc/src/mann/ns_config.man: Add new consolidated config man page.

2007-10-06  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/urlspace.c: Partition per-server urlspaces using an arrat of
	junctions rather than index nodes in the tree.  Add programmer notes
	about this tricky data structure.

	* nsd/limits.c:
	* nsd/queue.c:
	* nsd/url2file.c: Update to use internal convenience function
	NsUrlSpecificGet().

	* nslog/nslog.c: Use TCL_LL_MODIFIER for content-sent length.

	* nsd/tclrequest.c:
	* nsd/tclcmds.c:
	* tcl/compat.tcl: Rename ns_unregister_proc ns_unregister_op and let it
	serve to unregister any kind of Ns_OpProc. Remove the aliases
	ns_unregister_adp and ns_unregister_tcl.

	* nsd/adprequest.c: Fix missing white space in ADP arg proc.

	* tests/adp.test:
	* test/ns_register_proc.test: Use ns_unregister_op.

	* doc/src/mann/ns_register_adp.man: Update. Mention configuration
	options.

2007-10-04  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/conn.c:
	* nsd/connio.c:
	* nsd/nsd.h:
	* nsd/queue.c:
	* nsd/return.c: Make file support over 2Gb working again, convert all response and content 
	length variables into Tcl_WideInt
